# PR10_sisprog

practic_p/: alembic.ini  api.py  config.py  models.py  pyproject.toml  response_models.py
practic_p/alembic/versions/: 521920833ee6_first_commit.py
